[tool.poetry]
name = "tabbi"
version = "0.2.0"
description = "My personal scripts for investigating highly multiplexed tissue imaging and data"
authors = ["Yu-An Chen <atwood12@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.3"
seaborn = "^0.11.2"
scikit-image = "^0.18.3"
opencv-python = "^4.5.3.56"
corner = "^2.2.1"
scikit-learn = "^0.24.2"
napari = {extras = ["all"], version = "^0.4.11"}
zarr = "^2.10.0"
umap-learn = "^0.5"
datashader = "^0.13.0"
cmasher = "^1.6.2"

[tool.poetry.dev-dependencies]
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
